# belden-vlan-islands

./: .gitignore  README.md  chatbot_config.yaml  demo.py  demo_analysis.json  demo_analysis.txt  launch_gui.py  pyproject.toml  streamlit_chatbot.py  streamlit_visualization.py  test_analysis.py  verify_algorithm.py
data/: vlan_islands_data.json  vlan_islands_task.md
src/vlan_islands/: __init__.py  analyzer.py  chatbot.py  cli.py  models.py  parser.py  reports.py  visualization.py
tests/: __init__.py  test_analyzer.py  test_models.py
